# whatsapp-financas-bot

./: .env  financas.db  mensagens.db  pyproject.toml
scripts/: consulta.py
src/: bot.py  config.py  database.py  whatsapp.py
tests/: test_whatsapp_enviar_msg.py
